Cleaning the code by transforming Callback into an interface
git-svn-id: https://www.silverpeas.org/svn/silverpeas/components/trunk@3337 a8e77078-a1c7-4fa5-b8fc-53c5178a176c